--- a/docroot/themes/custom/site/src/scss/custom/entities/paragraph/field/_angled-background.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/paragraph/field/_angled-background.scss
@@ -21,6 +21,14 @@
 // Variants
 // --------------------------------------------------
 
+// Angled Background Title's size and weight
+.field--type-text-long p {
+    
+    font-size: 0.8em;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 700!important;
+}
+
 // Image
 .angled-background-image {
 
