--- a/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
@@ -17,7 +17,7 @@
 // Banner
 .banner {
   position: relative;
-  background-color: #fff;
+  background-color: transparent;
   @include angled_background('after');
 
   h1, h2, h3, h4, h5, h6,
@@ -28,15 +28,20 @@
     top: 40%;
     @extend h1;
     font-size: 56px;
+      letter-spacing: 0.055em;
     text-transform: uppercase;
     color: #fff;
-    font-weight: $headings-font-weight-bold;
+    font-weight: bold;
     left: 0;
     right: 0;
+      z-index: 10;
+      font-family: 'Open Sans', sans-serif;
     margin-left: auto;
     margin-right: auto;
   }
 
+
+    
   img {
     min-width: 100%;
   }
