--- a/docroot/themes/custom/site/src/scss/mixins/_angled-background.scss
+++ b/docroot/themes/custom/site/src/scss/mixins/_angled-background.scss
@@ -34,6 +34,7 @@
         transform-origin: bottom right;
         height: 130px;
         z-index: 2;
+          outline: 1px solid transparent;
       }
     }
   }
