--- a/docroot/themes/custom/site/templates/paragraphs/paragraph.html.twig
+++ b/docroot/themes/custom/site/templates/paragraphs/paragraph.html.twig
@@ -9,6 +9,7 @@ view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
 
     {% if background_image %}
     <div class="angled-background-image-wrapper">
+        <div class="cover-overlay"></div>
         <div class="angled-background-image-element" style="background-image: url({{ background_image }})"></div>
     </div>
     {% endif %}
