Awesome JS Added!

--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -98,6 +98,8 @@
                       
                         {{ page.banner }}
                         <div class="cover-overlay"></div>
+                           <div class="imgcover"></div>
+                        <div class="imgcover blur"></div>
                     </div>
                 {% endblock %}
             {% endif %}
