--- a/docroot/themes/custom/site/src/scss/custom/components/_header.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_header.scss
@@ -188,7 +188,7 @@
 
   .layout__header-logo {
     position: absolute;
-    background: #00bcff url('') center center no-repeat;
+    background: #00bcff url('http://svgur.com/i/ZE.svg') center center no-repeat;
     background-size: 120%;
     width: 105px;
     height: 105px;
