Fixed position of Footer in Safari
This fix the position of the footer, but removes the blur animation
from Safari.

--- a/docroot/themes/custom/site/src/scss/custom/components/_header.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_header.scss
@@ -199,6 +199,16 @@
 // PopUp CTA 
 
 
+@supports (overflow:-webkit-marquee) and (justify-content:inherit) {
+
+    body {
+        
+        height: auto;
+    }
+
+}
+
+
 .hideit {
     
     display: none!important;
