Fix language selector

--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -12,7 +12,7 @@
     <!-- End - drawer -->
 
     <!-- Begin - header -->
-    <header class="layout__header layout__header--waterfall">
+    <header class="layout__header">
 
         <!-- Begin - logo -->
         <div class="layout__header-logo"></div>
