--- a/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
@@ -24,26 +24,54 @@
   .block-title {
     position: absolute;
     display: block;
-    text-align: center;
     top: 40%;
+    left: 0;
+    right: 0;
+    text-align: center;
     @extend h1;
     font-size: 56px;
-      letter-spacing: 0.055em;
+    letter-spacing: 0.055em;
     text-transform: uppercase;
     color: #fff;
     font-weight: bold;
-    left: 0;
-    right: 0;
-      z-index: 10;
-      font-family: 'Open Sans', sans-serif;
-    margin-left: auto;
-    margin-right: auto;
   }
 
-
-    
   img {
-    min-width: 100%;
+    width: 100%;
+  }
+
+  .banner-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 10;
+    background-color: rgba(0, 0, 0, .5);
+  }
+
+  #block-logo-overlay {
+    display: none;
+    position: absolute;
+    right: 0;
+    width: 500px;
+    height: 100%;
+    background: rgba(0, 188, 255, 0.7);
+    margin-top: 0px;
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    -webkit-clip-path: polygon(110% 0, 0% 100%, 100% 100%);
+    clip-path: polygon(110% 0, 0% 100%, 100% 100%);
+  }
+
+  #logo-frontpage {
+    display: none;
+    width: 320px;
+    min-width: 0 !important;
+    margin-left: 150px;
+    margin-bottom: 50px;
   }
 }
 
