Banner improvements and corrections

--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -82,27 +82,25 @@
             {% if page.banner %}
                 {% block banner %}
                     <div class="banner">
-                        <div class="banner-overlay"></div>
-
                         {{ page.banner }}
                     </div>
                 {% endblock %}
             {% endif %}
 
             {# Header #}
-            {% if page.header %}
-                {% block header %}
-                    <div role="heading">
-                        <div class="angled-background-color angled-background-color-white">
-                            <div class="angled-background-inner">
-                                <div class="container">
-                                    {{ page.header }}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                {% endblock %}
-            {% endif %}
+            {#{% if page.header %}#}
+                {#{% block header %}#}
+                    {#<div role="heading">#}
+                        {#<div class="angled-background-color angled-background-color-white">#}
+                            {#<div class="angled-background-inner">#}
+                                {#<div class="container">#}
+                                    {#{{ page.header }}#}
+                                {#</div>#}
+                            {#</div>#}
+                        {#</div>#}
+                    {#</div>#}
+                {#{% endblock %}#}
+            {#{% endif %}#}
 
             <!-- Begin - content -->
             <section{{ content_attributes.addClass(content_classes) }}>
