--- a/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
@@ -17,23 +17,39 @@
 // Banner
 .banner {
   position: relative;
-  background-color: transparent;
+  background-color: #fff;
   @include angled_background('after');
 
-  h1, h2, h3, h4, h5, h6,
-  .block-title {
+  .banner-inner {
+    position: relative;
+  }
+
+  .banner-content {
     position: absolute;
-    display: block;
-    top: 40%;
+    z-index: 100;
+    top: 10%;
     left: 0;
     right: 0;
-    text-align: center;
-    @extend h1;
-    font-size: 56px;
-    letter-spacing: 0.055em;
-    text-transform: uppercase;
-    color: #fff;
-    font-weight: bold;
+
+    .banner-title {
+      display: block;
+      text-align: center;
+      @extend h2;
+      letter-spacing: 0.055em;
+      text-transform: uppercase;
+      color: #fff;
+      font-weight: bold;
+    }
+
+    .field--name-field-link {
+      text-align: center;
+      padding-top: 20px;
+
+      a {
+        @extend .btn;
+        @extend .btn-primary;
+      }
+    }
   }
 
   img {
@@ -50,28 +66,17 @@
     background-color: rgba(0, 0, 0, .5);
   }
 
-  #block-logo-overlay {
-    display: none;
+  .banner-logo-outer {
     position: absolute;
     right: 0;
     width: 500px;
     height: 100%;
     background: rgba(0, 188, 255, 0.7);
-    margin-top: 0px;
-    z-index: 9999;
+    z-index: 100;
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    -webkit-clip-path: polygon(110% 0, 0% 100%, 100% 100%);
     clip-path: polygon(110% 0, 0% 100%, 100% 100%);
-  }
-
-  #logo-frontpage {
-    display: none;
-    width: 320px;
-    min-width: 0 !important;
-    margin-left: 150px;
-    margin-bottom: 50px;
   }
 }
 
@@ -101,7 +106,16 @@
 @include media-breakpoint-up(sm) {
 
   // Banner
-  .banner {}
+  .banner {
+
+    .banner-content {
+      top: 20%;
+
+      .banner-title {
+        font-size: 46px;
+      }
+    }
+  }
 }
 
 // Tablet - only
@@ -115,7 +129,16 @@
 @include media-breakpoint-up(md) {
 
   // Banner
-  .banner {}
+  .banner {
+
+    .banner-content {
+      top: 40%;
+
+      .banner-title {
+        font-size: 56px;
+      }
+    }
+  }
 }
 
 // Desktop - only
