--- a/docroot/themes/custom/site/src/scss/custom/components/_header.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_header.scss
@@ -193,7 +193,6 @@
 
 // PopUp CTA
 .hideit {
-
   display: none !important;
 }
 
@@ -211,8 +210,7 @@
   -moz-box-shadow: 0px -4px 64px -19px rgba(0, 0, 0, 0.43);
   box-shadow: 0px -4px 64px -19px rgba(0, 0, 0, 0.43);
 
-  & .close {
-
+  .close {
     height: 75px;
     margin: 0;
     display: flex;
@@ -235,8 +233,7 @@
   clip-path: polygon(0 0, 41% 0, 25% 100%, 0 100%);
   margin-right: -150px;
 
-  & h5 {
-
+  h5 {
     color: #fff;
     font-size: $font-size-small;
     font-weight: $font-weight-bold;
@@ -244,17 +241,14 @@
     text-transform: uppercase;
 
   }
-
 }
 
 #spacing {
-
   color: lightgray;
   margin-left: 5px;
 }
 
 #pc-description {
-
   display: flex;
   width: 100%;
   height: 75px;
@@ -263,12 +257,10 @@
   justify-content: flex-start;
 
   & p {
-
     margin: 0;
   }
 
   & a {
-
     margin-left: 10px;
     font-weight: $font-weight-bold;
     font-family: 'Open Sans', sans-serif;
