Logo inside banner

--- a/docroot/themes/custom/site/templates/block/block--bundle--banner.html.twig
+++ b/docroot/themes/custom/site/templates/block/block--bundle--banner.html.twig
@@ -5,7 +5,9 @@
     <!-- End - overlay -->
 
     <!-- Begin - logo -->
-    <div class="banner-logo-outer"></div>
+    <div class="banner-logo">
+        <div class="banner-logo-image"></div>
+    </div>
     <!-- End - logo -->
 
     {% if content.field_image is not empty %}
