--- a/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
@@ -66,7 +66,7 @@
     background-color: rgba(0, 0, 0, .5);
   }
 
-  .banner-logo-outer {
+  .banner-logo {
     position: absolute;
     right: 0;
     width: 500px;
@@ -76,7 +76,17 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    clip-path: polygon(110% 0, 0% 100%, 100% 100%);
+    clip-path: polygon(107% 0, 0% 100%, 100% 100%);
+
+    .banner-logo-image {
+      position: absolute;
+      right: 50px;
+      bottom: 10%;
+      background: url('../images/banner-logo.png') center center no-repeat;
+      background-size: 100%;
+      width: 250px;
+      height: 250px;
+    }
   }
 }
 
@@ -92,7 +102,12 @@
 @include media-breakpoint-up(xs) {
 
   // Banner
-  .banner {}
+  .banner {
+
+    .banner-logo {
+      display: none;
+    }
+  }
 }
 
 // Mobile - only
@@ -137,6 +152,10 @@
       .banner-title {
         font-size: 56px;
       }
+    }
+
+    .banner-logo {
+      display: block;
     }
   }
 }
