--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -145,13 +145,13 @@
                                     {% endif %}
 
                                     {% if page.footer_top_second %}
-                                        <div class="col-xs-12 col-sm-6 col-md-3" style="margin-top:-100px;">
+                                        <div class="col-xs-12 col-sm-6 col-md-3">
                                             {{ page.footer_top_second }}
                                         </div>
                                     {% endif %}
 
                                     {% if page.footer_top_third %}
-                                        <div class="col-xs-12 col-sm-6 col-md-3" style="margin-top:-100px;">
+                                        <div class="col-xs-12 col-sm-6 col-md-3">
                                             {{ page.footer_top_third }}
                                         </div>
                                     {% endif %}
