--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -15,7 +15,7 @@
     <header class="layout__header">
 
         <!-- Begin - logo -->
-        <div class="layout__header-logo"></div>
+        <a class="layout__header-logo" href="{{ url('<front>') }}"></a>
         <!-- End - logo -->
 
         <div class="layout__header-row layout__header-row--top">
