--- a/docroot/themes/custom/site/templates/menu/menu--main--site-main-menu.html.twig
+++ b/docroot/themes/custom/site/templates/menu/menu--main--site-main-menu.html.twig
@@ -43,6 +43,9 @@
       </li>
     {% endfor %}
 
+    {# Search icon #}
+    <li class="layout-navigation__link layout-navigation__link__icon"><a href="search/node"><span class="icon fa fa-search"></span></a></li>
+
     </ul>
   {% endif %}
 
