--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -86,7 +86,7 @@
                     </div>
                 {% endblock %}
             {% endif %}
-
+a[href=/search]
             {# Header #}
             {% if page.header %}
                 {% block header %}
