--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -1,5 +1,5 @@
 <!-- Begin - wrapper -->
-<div class="layout__wrapper layout__header--scroll">
+<div class="layout__wrapper layout--fixed-header">
 
     <!-- Begin - drawer -->
     <div class="layout__drawer" aria-hidden="true">
