--- a/docroot/themes/custom/site/templates/menu/menu--main--site-main-menu.html.twig
+++ b/docroot/themes/custom/site/templates/menu/menu--main--site-main-menu.html.twig
@@ -42,10 +42,23 @@
         {% endfor %}
 
         {# Search icon #}
-        <li class="layout-navigation__link layout-navigation__link__icon"><a href="search/node"><span class="icon fa fa-search"></span></a></li>
+        <li class="layout-navigation__link layout-navigation__link__icon"><a class="search-button" href="#"><span class="icon fa fa-search"></span></a></li>
 
     </ul>
     {% endif %}
 
     {% endmacro %}
+    
+    <div class="hidden" id="search-form-popover">
+      <form id="search-form" action="/search-result" method="get" accept-charset="UTF-8">
+        <div class="form-group add-on">
+          <input class="form-control" placeholder="Search"   type="text" size="60">        
+          <div class="form-group-btn">
+            <button type="submit" name="" class="form-submit btn-search">
+              <span class="glyphicon glyphicon-search"></span> 
+            </button>
+          </div>
+        </div>
+        </form>
+    </div>
 
