Mostly css/twig enhancements, fields additions and news view update.

--- a/docroot/themes/custom/site/templates/page/page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page.html.twig
@@ -38,7 +38,7 @@
 
             <!-- Begin - tour -->
             <aside class="layout-header-tour">
-                <a href="#"><i class="material-icons">bookmark_border</i> Rundvisning <span><strong>Det er gratis</strong></span></a>
+                <a href="#"><i class="material-icons">bookmark_border</i> Rundvisning</a> <span><strong>Det er gratis</strong></span>
             </aside>
             <!-- End - tour -->
 
