--- a/docroot/themes/custom/site/templates/block/block--bundle--banner.html.twig
+++ b/docroot/themes/custom/site/templates/block/block--bundle--banner.html.twig
@@ -20,7 +20,7 @@
 
             {{ title_prefix }}
             {% if label %}
-                <h2{{ title_attributes.addClass('banner-title') }}>{{ label }}</h2>
+                <h2{{ title_attributes.addClass('banner-title') }}>{{ content.field_image['#items'].alt }}</h2>
             {% endif %}
             {{ title_suffix }}
 
