Small CSS changes:
1) Cards has been updated with the right font weight etc.

--- a/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
@@ -39,6 +39,7 @@
       text-transform: uppercase;
       color: #fff;
       font-weight: bold;
+        font-family: 'Open Sans', sans-serif;
     }
 
     .field--name-field-link {
